# alfarobi_ws

src/ALFAROBI-Communication/base_station_monitor/: CMakeLists.txt  base_monitor_node.cpp  basemonitor.cpp  basemonitor.h  basemonitor.ui
src/ALFAROBI-Communication/game_controller/: CMakeLists.txt
src/ALFAROBI-Communication/game_controller/include/game_controller/: game_control_data_t.h  game_controller_client_t.h  spl_coach_message_t.h
src/ALFAROBI-Communication/game_controller/launch/: game_controller.launch  game_controller_cpp.launch
src/ALFAROBI-Communication/game_controller/msg/: GameState.msg
src/ALFAROBI-Communication/game_controller/scripts/: gamestate.py  listener.py  receiver.py  talker.py
src/ALFAROBI-Communication/game_controller/src/: game_controller.cpp  game_controller_client_t.cpp
src/ALFAROBI-Communication/team_communication/: CMakeLists.txt  package.xml
src/ALFAROBI-Communication/team_communication/launch/: base_monitor.launch  team_communication.launch
src/ALFAROBI-Communication/team_communication/msg/: robot_data.msg  team_comm.msg  team_data.msg
src/ALFAROBI-Communication/team_communication/scripts/: StateCom.py  killServer.sh  l-runClient.sh  l-runServer.sh  robot_com.py
src/ALFAROBI-Communication/team_communication/src/: client_node.cpp  communication.h  communicationSocket.cpp  hostname.cpp  robi.cpp  server_node.cpp
src/ALFAROBI-Localization/mcl_localization/: CMakeLists.txt  config.yaml  mcl_localization.launch  package.xml
src/ALFAROBI-Localization/mcl_localization/distance_mat/: dist_mat.m  error_func.m
src/ALFAROBI-Localization/mcl_localization/include/mcl_localization/: mcl_localization.h
src/ALFAROBI-Localization/mcl_localization/msgs/: localization.msg  localization_param.msg
src/ALFAROBI-Localization/mcl_localization/src/: mcl_localization.cpp  mcl_localization_node.cpp
src/ALFAROBI-Localization/mcl_localization/srv/: GetLocParam.srv  SetLocParam.srv
src/ALFAROBI-Localization/mcl_viewer/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  mcl_viewer.cpp  node.cpp  node.h  package.xml
src/ALFAROBI-Main/alfarobi/: CMakeLists.txt  package.xml
src/ALFAROBI-Main/alfarobi/include/alfarobi/: alfarobi.h  ball_tracker.h  behavioral.h  cat2_tracker.h  communication.h  dribbler.h  goalpost_tracker.h  kepeer.h  messagehandler.h  passer.h  penalty_manual.h  pillar_tracker.h  runner.h  runnerTrial.h  soccer.h  square_tracker.h  strategycontroller.h
src/ALFAROBI-Main/alfarobi/launch/: calibration_fallen.launch  calibration_shifting.launch  calibration_striker.launch  dribbler.launch  fallen_mode.launch  keeper.launch  passerA.launch  passerB.launch  passer_service.launch  penalty.launch  runner.launch  shifting_mode.launch  striker.launch  striker_new.launch  striker_pillar.launch
src/ALFAROBI-Main/alfarobi/src/: alfarobi_node.cpp
src/ALFAROBI-Main/alfarobi/src/olympic/: dribbler.cpp  passer.cpp  penalty_manual.cpp  runner.cpp  runnerTrial.cpp
src/ALFAROBI-Motion/base_module/: CMakeLists.txt
src/ALFAROBI-Motion/base_module/data/: .gitignore  new_ini_pose.yaml
src/ALFAROBI-Motion/base_module/src/: base_module.cpp
src/ALFAROBI-Motion/capture_step_module/: CMakeLists.txt
src/ALFAROBI-Motion/capture_step_module/config/: param.yaml
src/ALFAROBI-Motion/capture_step_module/src/: capture_step_walking.cpp  robotmodel.cpp
src/ALFAROBI-Motion/head_control_module/: CMakeLists.txt  package.xml
src/ALFAROBI-Motion/head_control_module/src/: head_control_module.cpp
src/ALFAROBI-Motion/kicking/: CMakeLists.txt
src/ALFAROBI-Motion/kicking/config/: kickManip.yaml
src/ALFAROBI-Motion/kicking/src/: kicking.cpp
src/ALFAROBI-Motion/odometry/: CMakeLists.txt
src/ALFAROBI-Motion/odometry/msg/: RobotCoordinat.msg
src/ALFAROBI-Motion/odometry/src/: kinematics.cpp  odometry.cpp
src/ALFAROBI-Motion/op3_manager/: CMakeLists.txt  package.xml
src/ALFAROBI-Motion/op3_manager/launch/: alfarobi_manager.launch  alfarobi_manager_service.launch  op2_manager.launch
src/ALFAROBI-Motion/op3_manager/src/: op3_manager.cpp
src/ALFAROBI-Motion/quintic_walk/: CMakeLists.txt
src/ALFAROBI-Motion/quintic_walk/config/: config.yaml
src/ALFAROBI-Motion/quintic_walk/src/: fuzzy_wa_mom.cpp  kinematics.cpp  quintic_lama.cpp  quinticwalk.cpp
src/ALFAROBI-Motion/walk_zmp/: CMakeLists.txt
src/ALFAROBI-Motion/walk_zmp/src/: .gitignore
src/ALFAROBI-Msgs/capture_step_module_msgs/: CMakeLists.txt  package.xml
src/ALFAROBI-Msgs/capture_step_module_msgs/msg/: WalkingParam.msg
src/ALFAROBI-Msgs/data_log_msgs/: CMakeLists.txt  package.xml
src/ALFAROBI-Msgs/data_log_msgs/msg/: DataLog.msg
src/ALFAROBI-Msgs/quintic_walk_msgs/: CMakeLists.txt  package.xml
src/ALFAROBI-Tools/arduino_calibrator/: CMakeLists.txt  arduinocontroller.cpp  arduinocontroller.h  chart.cpp  chart.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  robotitem.cpp  robotitem.h
src/ALFAROBI-Tools/vision_calibration/: CMakeLists.txt  image_clip.cpp  main.cpp  main_window.cpp  main_window.h
src/ALFAROBI-Vision/dnn_detector/: CMakeLists.txt  dnn_detector_node.cpp  package.xml
src/ALFAROBI-Vision/dnn_detector/cfg/: DnnParams.cfg
src/ALFAROBI-Vision/dnn_detector/config/: SoccerBall-Alfarobi_deploy.prototxt  config.yaml  dnn.yaml
src/ALFAROBI-Vision/dnn_detector/include/: FieldDetector.h  dnn_config.h  dnn_detector.h  line_detector.h  tools.h
src/ALFAROBI-Vision/dnn_detector/launch/: detector_from_usb_cam.launch  dnn_ball_detector.launch  dnn_ball_detector_gazebo.launch
src/ALFAROBI-Vision/dnn_detector/msg/: CircleStamped.msg  DnnDetectorParams.msg
src/ALFAROBI-Vision/dnn_detector/src/: FieldDetector.cpp  dnn_detector.cpp  line_detector.cpp
src/ALFAROBI-Vision/dnn_detector/srv/: GetParameters.srv  SetParameters.srv
src/ALFAROBI-Vision/vision_simple/: CMakeLists.txt  package.xml
src/ALFAROBI-Vision/vision_simple/launch/: camera_gazebo.launch  vision_simple.launch
src/ALFAROBI-Vision/vision_simple/msg/: Points.msg
src/ALFAROBI-Vision/vision_simple/src/: fielddetection.cpp  linedetection.cpp  vision_core.cpp  vision_simple_node.cpp
(+1402 files in other folders)
