<?xml version="1.0"?>
<package>
  <name>team_communication</name>
  <version>0.0.1</version>
  <description>A package for communicating between ROS and other applications using TCP/IP protocol.</description>

  <maintainer email="mikael17125@gmail.com">Abhinav Jain</maintainer>

>
  <license>MIT</license>


  <author email="mikael17125@gmail.com">Abhinav Jain</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
  <!-- Other tools can request additional information be placed here -->

  </export>
</package>
