<?xml version="1.0"?>
<package>
  <name>op3_manager</name>
  <version>0.1.0</version>
  <description>The op3_manager package</description>
  <license>BSD</license>
  <author email="kmjung@robotis.com">kayman jung</author>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>dynamixel_sdk</build_depend>
  <build_depend>robotis_framework_common</build_depend>
  <build_depend>robotis_device</build_depend>
  <build_depend>robotis_controller</build_depend>
  <build_depend>robotis_controller_msgs</build_depend>
  <build_depend>robotis_math</build_depend>
  <build_depend>op3_kinematics_dynamics</build_depend>
  <build_depend>op3_base_module</build_depend>
  <build_depend>op3_head_control_module</build_depend>
  <build_depend>op3_action_module</build_depend>
  <build_depend>walk_zmp</build_depend>
  <build_depend>odometry</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>robot_state_module</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>dynamixel_sdk</run_depend>
  <run_depend>robotis_framework_common</run_depend>
  <run_depend>robotis_device</run_depend>
  <run_depend>robotis_controller</run_depend>
  <run_depend>robotis_controller_msgs</run_depend>
  <run_depend>robotis_math</run_depend>
  <run_depend>op3_kinematics_dynamics</run_depend>
  <run_depend>op3_base_module</run_depend>
  <run_depend>op3_head_control_module</run_depend>
  <run_depend>op3_action_module</run_depend>
  <run_depend>walk_zmp</run_depend>
  <run_depend>odometry</run_depend>
  <run_depend>cmake_modules</run_depend>
  <run_depend>robot_state_module</run_depend>

</package>
